# asgp

./: .gitignore  CMakeLists.txt  README.md  changelog  run.xml.sample  super-great-park
android/lib/src/: CMakeLists.txt  android_game_filesystem.hpp  android_logger.hpp  android_resource_pool.hpp  game.hpp  java_interface.hpp  launcher.hpp  main.hpp  make.sh
data/: CMakeLists.txt
data/animation/: balloon-blast.anim  balloon-blast.canim  balloon-slow.anim  balloon-slow.canim  balloon.anim  balloon.canim  explosion.anim  explosion.canim  fire.anim  fire.canim  paint.anim  paint.canim  switching-warning.anim  switching-warning.canim  target-red.anim  target-yellow.anim  target-yellow.canim
data/animation/balloon/: balloon-blue-1.anim  balloon-blue-1.canim  balloon-blue-2.anim  balloon-blue-2.canim  balloon-blue-3.anim  balloon-blue-3.canim  balloon-blue.anim  balloon-blue.canim  balloon-green-1.anim  balloon-green-1.canim  balloon-green-2.anim  balloon-green-2.canim  balloon-green-3.anim  balloon-green-3.canim  balloon-green.anim  balloon-green.canim  balloon-orange-1.anim  balloon-orange-1.canim  balloon-orange-2.anim  balloon-orange-2.canim  balloon-orange-3.anim  balloon-orange-3.canim  balloon-orange.anim  balloon-orange.canim  balloon-purple-1.anim  balloon-purple-1.canim  balloon-purple-2.anim  balloon-purple-2.canim  balloon-purple-3.anim  balloon-purple-3.canim  balloon-purple.anim  balloon-purple.canim  balloon-red-1.anim  balloon-red-1.canim  balloon-red-2.anim  balloon-red-2.canim  balloon-red-3.anim  balloon-red-3.canim  balloon-red.anim  balloon-red.canim  (+8 more)
data/animation/bird/: fly.anim  fly.canim  idle.anim  idle.canim
data/animation/bonus/: bowl.anim  bowl.canim
data/animation/boss/: emergency-on.anim  emergency-on.canim  engine.anim  engine.canim  lady-plunger.anim  lady-plunger.canim  lady-smoke.anim  lady-smoke.canim  lady.anim  lady.canim  pipe-1.anim  pipe-1.canim  pipe-3.anim  pipe-3.canim  pipe-4.anim  pipe-4.canim  propeller.anim  propeller.canim  smoke.anim  smoke.canim  trap-door-closing.anim  trap-door-closing.canim  trap-door.anim  trap-door.canim
data/animation/cart/: spatter.anim  spatter.canim  speed.anim  speed.canim  tar.anim  tar.canim
data/animation/effect/: double-wave.anim  double-wave.canim  steam.anim  steam.canim  wave.anim  wave.canim
data/animation/help/: cannon.anim  plunger.canim
data/animation/tar/: falling.anim  falling.canim  on_rail.anim  on_rail.canim  splash.anim  splash.canim
data/font/absender/: absender-1.spritepos  absender.fnt  absender.spritedesc  absender.xcf.bz2
data/font/balloon/: balloon-1.spritepos  balloon-2.spritepos  balloon.fnt  balloon.spritedesc  balloon.xcf.bz2  xcf2font.sh
data/font/fontopo/: fontopo-1.spritepos  fontopo-2.spritepos  fontopo-small-1.spritepos  fontopo-small.fnt  fontopo-small.spritedesc  fontopo.fnt  fontopo.spritedesc  fontopo.xcf.bz2
data/font/speech/: speech-1.spritepos  speech.fnt  speech.spritedesc
data/gfx/: common.spritedesc  common.spritepos
data/gfx/aquatic/: aquatic-1.spritepos  aquatic-2.spritepos  aquatic-3.spritepos  aquatic-4.spritepos  aquatic-5.spritepos  aquatic.spritedesc  archipelago.xcf.bz2  board.xcf.bz2  boat.xcf.bz2  dolphin.xcf.bz2  killer-whale.xcf.bz2  landscape-1.spritepos  landscape.spritedesc  landscape.xcf.bz2  octopus.xcf.bz2  shark.xcf.bz2  surfer.xcf.bz2  whale.xcf.bz2
data/gfx/balloon/: balloon.spritedesc  balloon.spritepos  balloon.xcf.bz2  logo.xcf.bz2
data/gfx/bird/: bird-afraid.xcf.bz2  bird-dead.xcf.bz2  bird-fly.xcf.bz2  bird-idle.xcf.bz2  bird.spritedesc  bird.spritepos  feather.xcf.bz2  stand.spritedesc  stand.spritepos  stand.xcf.bz2
data/gfx/bomb/: bomb.spritedesc  bomb.spritepos  bomb.xcf.bz2
data/gfx/bonus/: bowl.spritedesc  bowl.spritepos
data/gfx/boss/: body.xcf.bz2  boss.spritedesc  boss.spritepos  emergency.xcf.bz2  engine.xcf.bz2  lady.spritedesc  lady.spritepos  lady.xcf.bz2  module-2.spritepos  module.spritedesc  module.xcf.bz2  more-pipe.spritedesc  more-pipe.spritepos  pipe-1.xcf.bz2  pipe-3.xcf.bz2  smoke.xcf.bz2  (+6 more)
data/level/: buy.cl  buy.lvl  credits.cl  credits.lvl  intro-transition.cl  intro-transition.lvl  intro.cl  intro.lvl  level_selection.cl  level_selection.lvl  start.cl  start.lvl  test-end.cl  test-end.lvl  title.cl  title.lvl
data/model/: balloon.cm  balloon.mdl  bird.cm  bird.mdl  bomb.cm  bomb.mdl  bonus.cm  bonus.mdl  boss.cm  boss.mdl  cable.cm  cable.mdl  cannonball.cm  cannonball.mdl  cart-brian.cm  cart-brian.mdl  cart.cm  cart.mdl  crate.cm  crate.mdl  floating_score.cm  floating_score.mdl  module.cm  module.mdl  plunger.cm  plunger.mdl  switching.cm  switching.mdl  tar.cm  tar.mdl  tnt.cm  tnt.mdl  wall.cm  wall.mdl
data/music/: aquatic.mid  aquatic.tg  boss.mid  boss.tg  cake.mid  cake.tg  credits.mid  credits.tg  death.mid  death.tg  intro.mid  intro.tg  music.mid  music.tg  space.mid  space.tg  western-bad.tg  western.mid  western.tg
data/script/: 0-1-enable-cannon.txt  1-8.txt  2-8.txt  3-8.txt  4-8.txt  5-8-transition.txt  5-8.txt  intro-transition.txt  intro.txt
data/sound/: AUTHORS
data/test/: balloon.cl  balloon.lvl  balloon_with_all.cl  balloon_with_all.lvl  base.cl  base.lvl  bird.cl  bird.lvl  bird_with_all.cl  bird_with_all.lvl  bomb.cl  bomb.lvl  bomb_with_all.cl  bomb_with_all.lvl  bonus.cl  bonus.lvl  cable.cl  cable.lvl  crate.cl  crate.lvl  danger.cl  danger.lvl  hole.cl  hole.lvl  large_hole.cl  large_hole.lvl  level-1.cl  level-1.lvl  level-2.cl  level-2.lvl  level-4.cl  level-4.lvl  parallax.cl  parallax.lvl  patterns.cl  patterns.lvl  screen.cl  screen.lvl  slope_and_hot_spot.cl  slope_and_hot_spot.lvl  (+22 more)
desktop/: CMakeLists.txt  asgp-icon.xcf.bz2
desktop/applications/: andy-super-great-park-demo.desktop.in  andy-super-great-park.desktop.in  straining-coasters.desktop.in
desktop/locale/: CMakeLists.txt
desktop/man/: CMakeLists.txt  andy-super-great-park.sgml  straining-coasters.sgml
desktop/menu/: andy-super-great-park-demo.in  andy-super-great-park.in  straining-coasters.in
desktop/pixmaps/: asgp.xpm
launcher/src/: CMakeLists.txt  launcher.hpp
(+792 files in other folders)
